--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
 
-
 *{
     margin: 0px;
     padding: 0px;
@@ -33,7 +32,6 @@ body{
    opacity: 0.8;
    top: 0;
    left: 0;
-
 }
 #logo
 {
@@ -92,7 +90,6 @@ body{
 }
 #home::before
 {
-
    content: "";
    position: absolute;
    background: url('../bgimage.jpg') no-repeat center center/cover;
@@ -288,6 +285,7 @@ body{
 
 #home{
     margin: 40px 0px;
+    margin-left: 10px;
 }
 
 }
